# medulla

./: .gitignore  AGENTS.md  README.md  SPEC.md  TASK-docker-customization.md  install.sh  medulla  medulla-graph  medulla.code-workspace  pyproject.toml
cli-agent/medulla/: __init__.py  __main__.py  cli.py  executor.py  graph.py  graph_cli.py  init.py  install_skill.py  output.py  pipeline.py  runner.py  state.py  upgrade.py
cli-agent/medulla/v2/: classify.py  cli.py  contract.py  engine.py  errors.py  harness.py  model.py  procrun.py  render.py  rundir.py  signals.py
cli-agent/pipelines/spar/: .gitignore  SKILL.md  pipeline.yaml
cli-agent/pipelines/spar/prompts/: spar.md
cli-agent/scripts/: Dockerfile.default  bridge-shim.sh  docker.py  host-builder.sh  init-docker.sh
cli-agent/tests/: conftest.py  test_adapters.py  test_audit_fixes.py  test_classify.py  test_contract.py  test_docker_env.py  test_e2e.py  test_hooks_agents.py  test_pools.py  test_render.py  test_resume.py
cli-agent/workflows/spar/: Dockerfile  SKILL.md  pipeline.yaml  workflow.yaml
cli-agent/workflows/spar/prompts/: spar.md
cli-agent/workflows/spar/scripts/: panelist.sh
live-tests/: README.md  run-all.sh
live-tests/t1-claude/: pipeline.yaml
live-tests/t10-array-source/: pipeline.yaml
live-tests/t10-array-source/runs/2026-07-15_12-25-05-35c6d440/: journal.jsonl  outcome.json
live-tests/t11-chain/: workflow.yaml
live-tests/t11-chain/runs/2026-07-15_12-32-20-46f599c7/: journal.jsonl  outcome.json
live-tests/t12-preguard/: workflow.yaml
live-tests/t12-preguard/runs/2026-07-15_12-32-34-bdc64ad6/: journal.jsonl  outcome.json
live-tests/t13-retry-post/: workflow.yaml
live-tests/t13-retry-post/runs/2026-07-15_12-32-43-6ff1c995/: journal.jsonl  outcome.json
live-tests/t14-interrupt/: run.sh  workflow.yaml
live-tests/t14-interrupt/runs/2026-07-15_12-47-38-8cc6b506/: outcome.json
live-tests/t15-timeout-live/: pipeline.yaml
live-tests/t15-timeout-live/runs/2026-07-15_12-33-34-c4b1505c/: journal.jsonl  outcome.json  pipeline.yaml
live-tests/t15-timeout-live/runs/2026-07-15_12-34-43-0b2d5111/: journal.jsonl  outcome.json  pipeline.yaml
live-tests/t15-timeout-live/runs/2026-07-15_12-35-44-0dccc144/: journal.jsonl  outcome.json
live-tests/t16-concurrent/: pipeline.yaml  run.sh
live-tests/t17-dirty-data/: workflow.yaml
live-tests/t18-empty-live/: workflow.yaml
live-tests/t2-codex/: pipeline.yaml
live-tests/t20-hetero/: workflow.yaml
live-tests/t4-agy/: workflow.yaml
live-tests/t5-panel/: workflow.yaml
live-tests/t6-fallback/: workflow.yaml
live-tests/t7-resume/: workflow.yaml
(+100 files in other folders)
