[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medulla"
version = "3.1.0"
description = "medulla — CLI orchestrator for AI-driven workflows (stages, signals, agent panels)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml", "graphviz"]

[project.scripts]
medulla = "medulla.cli:entry"
medulla-graph = "medulla.graph_cli:main"

[tool.setuptools]
packages = [
  "medulla",
  "medulla.scripts",
  "medulla.workflows",
  "medulla.workflows.spar",
  "medulla.workflows.spar.prompts",
  "medulla.workflows.spar.scripts",
]

[tool.setuptools.package-dir]
"medulla" = "cli-agent/medulla"
"medulla.scripts" = "cli-agent/scripts"
"medulla.workflows" = "cli-agent/workflows"

[tool.setuptools.package-data]
"medulla.scripts" = ["*.py", "*.sh"]
"medulla.workflows" = ["**/*"]
