[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medulla"
version = "4.0.4"
description = "medulla — a state machine for AI agents (nodes, signals, pools)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.scripts]
medulla = "medulla.cli:entry"

[tool.setuptools]
packages = [
  "medulla",
  "medulla.scripts",
  "medulla.v2",
  "medulla.pipelines",
  "medulla.pipelines.spar",
  "medulla.pipelines.spar.prompts",
  "medulla.pipelines.spar.scripts",
]

[tool.setuptools.package-dir]
"medulla" = "cli-agent/medulla"
"medulla.scripts" = "cli-agent/scripts"
"medulla.pipelines" = "cli-agent/pipelines"

[tool.setuptools.package-data]
"medulla.scripts" = ["*.py", "*.sh", "Dockerfile.default"]
"medulla.pipelines" = ["**/*"]
