[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medulla"
version = "4.1.0"
description = "medulla — a state machine for AI agents (nodes, signals, pools)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.scripts]
medulla = "medulla.cli:entry"

[tool.setuptools]
packages = [
  "medulla",
  "medulla.scripts",
  "medulla.v2",
  "medulla.workflows",
  "medulla.workflows.spar",
  "medulla.workflows.spar.prompts",
  "medulla.workflows.spar.scripts",
]

[tool.setuptools.package-dir]
"medulla" = "cli-agent/medulla"
"medulla.scripts" = "cli-agent/scripts"
"medulla.workflows" = "cli-agent/workflows"

[tool.setuptools.package-data]
"medulla.scripts" = ["*.py", "*.sh", "Dockerfile.default"]
"medulla.workflows" = ["**/*"]
